--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap" rel="stylesheet"/>
     
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -29,10 +30,14 @@
     </header>
     <form id="form-habits">
       <div class="habits">
-        <div class="habit" data-name="gym" >🦿</div>
-        <div class="habit" data-name="water">🥛</div>
-        <div class="habit" data-name="food">🍗</div>
-        <div class="habit" data-name="study">🤓</div>
+        <!-- <div class="habitTitle">Academia</div> -->
+        <div class="habit" data-name="gym" title="Academia" >🦿 Academia </div>
+        <!-- <div class="habitTitle">Água</div> -->
+        <div class="habit" data-name="water" title="Beber 3L de água">🥛 Água </div>
+        <!-- <div class="habitTitle">Ler</div> -->
+        <div class="habit" data-name="food" title="Ler">📙 Ler </div>
+        <!-- <div class="habitTitle">Estudar</div> -->
+        <div class="habit" data-name="study" title="Estudar">🤓 Estudar</div>
       </div>
       <div class="days">
         <div class="day">
