Add popup and support messages

--- a/index.html
+++ b/index.html
@@ -21,13 +21,18 @@
   <body>
     <header>
       <img src="./assets/logo.svg" alt="Logo marca do aplicativo habits" />
-      <button>
+      <button >
         <img src="./assets/plux.svg" alt="Sinal de mais roxo" /> 
         
-        <div> Registrar o meu dia </div>
-        
-      </button>
+        <div> Registrar o meu dia </div>      
+      </button>    
     </header>
+    <div class="tpopup" id="tpopup">
+        Dia adicionado com sucesso!
+      </div>
+    <div class="fpopup" id="fpopup">
+        Você só pode adicionar um dia de cada vez. Volte amanhã :)
+      </div>
     <form id="form-habits">
       <div class="habits">
         <!-- <div class="habitTitle">Academia</div> -->
